# load-balancer

./: .gitignore  Makefile  README.md  api_requests.http  pyproject.toml
src/: client.py  config.py  load_balancer.py  server.py  utils.py
src/client/: client.py
src/load_balancer/: load_balancer.py
src/server/: app.py  resources.py
tests/: test_load_balancer.py  test_server.py
